--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
 
-#map { 
-    height: 100vh;
+body {
+    padding: 0;
+    margin: 0;
+}
+html, body, #map {
+    height: 100%;
+    width: 100vw;
+}
+
+#map {
     background-color: #333;
 }
-
-body {
-    margin: 0px;
-    
-}
-
 
 img {
     image-rendering: pixelated;
