--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 body {
     padding: 0;
     margin: 0;
+    
 }
 html, body, #map {
     height: 100%;
@@ -10,6 +11,7 @@ html, body, #map {
 
 #map {
     background-color: #333;
+    background-image:url('./space.png');
 }
 
 img {
