--- a/style/style.css
+++ b/style/style.css
@@ -11,7 +11,7 @@ html, body, #map {
 
 #map {
     background-color: #333;
-    background-image:url('./images/space.png');
+    background-image:url('../images/space.png');
 }
 
 img {
