--- a/Hub/style.css
+++ b/Hub/style.css
@@ -7,6 +7,13 @@ body {
     height: 100vh;
 }
 
+#main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px
+}
+
 .mapNode {
     display: flex;
     flex-direction: column;
@@ -15,10 +22,12 @@ body {
     gap: 20px;
     width: 250px;
     height: 280px;
+    border-radius: 5px;
     background-color: darkcyan;
 }
 
 .mapNode img {
     width: 190px;
     height: 190px;
+    border: solid;
 }
