--- a/Hub/style.css
+++ b/Hub/style.css
@@ -31,3 +31,12 @@ body {
     height: 190px;
     border: solid;
 }
+
+.mapNode p2 {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 29px;  
+    color: white;
+}
