--- a/Hub/style.css
+++ b/Hub/style.css
@@ -7,6 +7,11 @@ body {
     height: 100vh;
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
+
 #main {
     display: flex;
     align-items: center;
@@ -18,7 +23,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px 25px;
+    padding: 20px;
     gap: 20px;
     width: 250px;
     height: 280px;
@@ -29,7 +34,8 @@ body {
 .mapNode img {
     width: 190px;
     height: 190px;
-    border: solid;
+    border-style: solid;
+    border-color: black;
 }
 
 .mapNode p2 {
