--- a/Hub/style.css
+++ b/Hub/style.css
@@ -14,9 +14,11 @@ a {
 
 #main {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    gap: 20px
+    gap: 20px;
+    max-width: 1220px;
 }
 
 .mapNode {
